syntax = "proto3";
package machine;
import "google/protobuf/empty.proto";

// dispathch machine id to client
message MachineClientId {
    string uuid = 1;
}

// static machine info
message MachineInfo {
    // unique id for the machine
    // it will be generated by the server
    optional string uuid = 1;
    string host_name = 2;
    string system_name = 3;
    string ip_address = 4;
    string kernel_version = 5;
    string os_version = 6;
    uint64 cpu_cores = 7;
    uint64 total_memory = 8;
    uint64 total_swap = 9;
    uint64 total_disk = 10;    
}

message MachineDynamicInfo {
    string uuid = 1;
    map<string, float> cpu_usage = 2;
}
service MachineService {
    rpc RegisterMachine(MachineInfo) returns (MachineClientId);
    rpc ReportDynamicInfo(MachineDynamicInfo) returns (google.protobuf.Empty);
}